--- a/GoldPred.ipynb
+++ b/GoldPred.ipynb
@@ -3209,9 +3209,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "model.save('GOLDH&L.h5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GA1gaTMyrQjA",
+        "outputId": "be47fa70-28ee-42ac-b0d3-afb489676830"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+            "  saving_api.save_model(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GA1gaTMyrQjA"
+        "id": "q0AzrDAZuL9P"
       },
       "execution_count": null,
       "outputs": []
@@ -3222,7 +3246,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNZ6HkHTKhSvBN/MtocD3xe",
+      "authorship_tag": "ABX9TyO8Lh2MDIeY7XMEqq0CWccK",
       "include_colab_link": true
     },
     "kernelspec": {
